--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -67,7 +67,7 @@
     <div class="isi">
         <div class="text">
             <h1>Latar Belakang</h1>
-            <p> Integrated Learning atau pembelajaran terpadu merupakan pendekatan pembelajaran yang menggabungkan
+            <p> <a class="italic">Integrated Learning</a> atau pembelajaran terpadu merupakan pendekatan pembelajaran yang menggabungkan
                 sembilan mata pelajaran dalam sebuah proyek besar. Proyek akhir kelas IX ini diwujudkan dalam bentuk
                 bazar kewirausahaan dan pentas seni, yang juga menjadi syarat kelulusan. Menurut KBBI, bazar adalah
                 pasar yang diselenggarakan untuk jangka waktu beberapa hari, yang dapat berupa pameran, penjualan
