--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -80,7 +80,7 @@
                 <p>Dalam pelaksanaanya, bazar diawali dengan pembagian enam kelompok di kelas yang masing masing
                 beranggotakan 6 murid. Pembagian ini tidak hanya bertujuan untuk membagi tugas secara merata, tetapi
                 juga untuk melatih keterampilan kerja sama dan komunikasi dalam kelompok. Siswi akan mulai menentukan
-                konsep produk yang akan dijual, mulai dari makanan, minuman, hingga barang kerajinan, selain itu siswi
+                konsep produk yang akan dijual, mulai dari makanan, minuman, hingga barang kerajinan. Selain itu siswi
                 akan menyusun katalog produk, desain stand bazar hingga promosi di media sosial. Pentas seni diawali
                 dengan kolaborasi antara kelompok kami dengan kelompok lain. Awalnya, kami merencanakan untuk
                 menampilkan pentas seni musikal drama. Kami melakukan diskusi mengenai konsep cerita drama, pembuatan
@@ -110,7 +110,7 @@
             <div class="imgs1">
                 <ol>
                     <li>Untuk meningkatkan kemampuan komunikasi dan bekerja sama dalam kelompok.</li>
-                    <li>Untuk meningkatkan keterampilan kewirausahaan siswi.</li>
+                    <li>Untuk meningkatkan keterampilan kewirausahaan siswi lain di sekolah.</li>
                     <li>Untuk memenuhi proyek akhir Integrated Learning kelas IX sebagai bagian dari persyaratan kelulusan.
                     </li>
                     <li>Untuk meningkatkan kreativitas siswa dalam bidang seni pertunjukan.</li>
