--- a/daftarpus.html
+++ b/daftarpus.html
@@ -70,7 +70,9 @@
             <ol class="dafpus" style="list-style-type: decimal;">
                 <li>SABDA. (2024). Amsal 23. Diakses dari <a href="https://alkitab.sabda.org/bible.php?book=20&chapter=23">https://alkitab.sabda.org/bible.php?book=20&chapter=23</a>pada 25 November 2024.</li>
                 <li>SABDA. (2024). Mazmur 37. Diakses dari <a href="https://alkitab.sabda.org/bible.php?book=19&chapter=37">https://alkitab.sabda.org/bible.php?book=19&chapter=37</a>pada 25 November 2024.</li>
-                <li>Detik.com. (2025). Kewirausahaan adalah: Konsep, Tujuan, Sifat, Ciri, dan Jenisnya. Diakses dari <a href="https://www.detik.com/bali/berita/d-6609173/kewirausahaan-adalah-konsep-tujuan-sifat-ciri-dan-jenisnya">https://www.detik.com/bali/berita/d-6609173/kewirausahaan-adalah-konsep-tujuan-sifat-ciri-dan-jenisnya</a>pada 20 Januari 2025.</li>
+                <li>Detik.com. (2025). Kewirausahaan adalah: Konsep, Tujuan, Sifat, Ciri, dan Jenisnya. Diakses dari 
+                    <br>
+                    <a href="https://www.detik.com/bali/berita/d-6609173/kewirausahaan-adalah-konsep-tujuan-sifat-ciri-dan-jenisnya">https://www.detik.com/bali/berita/d-6609173/kewirausahaan-adalah-konsep-tujuan-sifat-ciri-dan-jenisnya</a>pada 20 Januari 2025.</li>
                 <li><a href="https://id.wikipedia.org/wiki/Kewirausahaan">https://id.wikipedia.org/wiki/Kewirausahaan</a>diakses pada 25 Februari, 2025</li>
                 <li><a href="https://id.wikipedia.org/wiki/Statistika">https://id.wikipedia.org/wiki/Statistika</a> diakses pada 10 Februari, 2025</li>
                 <li><a href="https://m.kumparan.com/amp/ragam-info/cara-pembuatan-roti-dengan-bioteknologi-menggunakan-mikroorganisme-22gDseEuCSZ">https://m.kumparan.com/amp/ragam-info/cara-pembuatan-roti-dengan-bioteknologi-menggunakan-mikroorganisme-22gDseEuCSZ</a></li>
