--- a/promosi.html
+++ b/promosi.html
@@ -81,7 +81,7 @@
                 platform media sosial yang paling relevan untuk menjangkau audiens kami. Kami memilih Instagram, TikTok,
                 dan WhatsApp karena platform ini memiliki potensi besar dalam menjangkau audiens yang lebih luas dengan
                 cara yang interaktif.</p>
-            <p> <a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2" target="_blank">Instragram</a> kami pilih
+            <p> <a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2" target="_blank" style="font-style: italic;">Instragram</a> kami pilih
                 karena platform ini sangat visual dan memungkinkan kami untuk membagikan berbagai
                 jenis konten yang menarik seperti foto produk, poster, dan informasi mengenai bazar. <a
                     href="https://www.tiktok.com/@lestarika.luminia?_t=ZS-8u4WlbHv8Qp&_r=1" target="_blank"> TikTok</a>
