--- a/promosi.html
+++ b/promosi.html
@@ -71,7 +71,7 @@
                 <div class="sections">
                     <button><a href="#poster" vlink="white">Poster Produk</a></button>
                     <button><a href="#katalog" vlink="white">Katalog Produk</a></button>
-                    <button><a href="#instagram" vlink="white">Konten Instragram</a></button>
+                    <button><a href="#instagram" vlink="white">Konten Instagram</a></button>
                     <button><a href="#tiktok" vlink="white">Konten Tiktok</a></button>
                 </div>
 
@@ -81,20 +81,20 @@
                 platform media sosial yang paling relevan untuk menjangkau audiens kami. Kami memilih Instagram, TikTok,
                 dan WhatsApp karena platform ini memiliki potensi besar dalam menjangkau audiens yang lebih luas dengan
                 cara yang interaktif.</p>
-            <p> <a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2" target="_blank" style="font-style: italic;">Instragram</a> kami pilih
+            <p> <a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2" target="_blank" style="font-style: italic;">Instagram</a> kami pilih
                 karena platform ini sangat visual dan memungkinkan kami untuk membagikan berbagai
                 jenis konten yang menarik seperti foto produk, poster, dan informasi mengenai bazar. <a
-                    href="https://www.tiktok.com/@lestarika.luminia?_t=ZS-8u4WlbHv8Qp&_r=1" target="_blank"> TikTok</a>
+                    href="https://www.tiktok.com/@lestarika.luminia?_t=ZS-8u4WlbHv8Qp&_r=1" target="_blank" style="font-style: italic;"> TikTok</a>
                 kami pilih
                 untuk membuat konten video yang lebih kreatif dan dinamis, yang dapat dengan cepat menyebar di kalangan
-                audiens yang lebih muda. WhatsApp digunakan untuk menyebarkan informasi secara lebih personal kepada
+                audiens yang lebih muda. <i style="font-style: italic;">WhatsApp</i> digunakan untuk menyebarkan informasi secara lebih personal kepada
                 teman-teman, keluarga, dan komunitas terdekat kami. Ini sangat berguna dalam menyebarkan konten yang
                 lebih terfokus dan memastikan orang-orang yang kami kenal langsung mendapat update terbaru.
             </p>
 
             <h2>Pengelolaan Konten Media Sosial</h2>
             <p>
-                Setelah membuat akun resmi di Instagram (<a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2"
+                Setelah membuat akun resmi di <i style="font-style: italic;">Instagram</i> (<a href="https://www.instagram.com/p/DDdan-TS9Rm/?img_index=2"
                     target="_blank">@lestarika.luminia</a>), kami merencanakan jenis konten yang akan
                 diposting, termasuk jadwal upload dan siapa yang bertanggung jawab atas setiap platform. Konten yang
                 akan dibagikan termasuk poster produk, teaser bazaar, dan kegiatan tim dalam mempersiapkan bazar. Kami
@@ -104,7 +104,7 @@
             <p>Untuk memastikan bahwa konten yang dibagikan selalu konsisten dan berkualitas, kami juga menyusun pedoman
                 desain yang memastikan setiap konten sesuai dengan citra merek toko kami. Kami ingin audiens dapat
                 dengan mudah mengenali dan menghubungkan setiap konten dengan toko kami. Pengelolaan yang terstruktur
-                ini juga memastikan bahwa kami dapat mengoptimalkan penggunaan Instagram, TikTok, dan WhatsApp secara
+                ini juga memastikan bahwa kami dapat mengoptimalkan penggunaan <i style="font-style: italic;">Instagram, TikTok,</i> dan <i style="font-style: italic;">WhatsApp</i> secara
                 maksimal dan efektif.</p>
             <p>
 
