--- a/promosi.html
+++ b/promosi.html
@@ -116,7 +116,7 @@
                 <img src="poster.jpg" style="width: 300px; height: 400px; border-radius: 8px;">
                 <p style="text-align: justify;">
                     Salah satu elemen penting dalam strategi promosi kami adalah desain poster produk. Kami mendesain
-                    poster dengan menggunakan aplikasi Canva untuk membuat tampilan yang menarik menggunakan warna-warna
+                    poster dengan menggunakan aplikasi <i style="font-style: italic;">Canva</i> untuk membuat tampilan yang menarik menggunakan warna-warna
                     cerah dan gambar produk yang jelas, sehingga audiens yang melihatnya langsung tertarik untuk
                     mengetahui lebih lanjut. Poster ini akan mencakup informasi penting tentang produk yang dijual,
                     seperti nama produk, harga, cara pemesanan, dan juga waktu pelaksanaan bazar. Kami pastikan poster
