--- a/promosi.html
+++ b/promosi.html
@@ -113,7 +113,13 @@
         <div class="text">
 
             <section id="poster">
-                <img src="poster.jpg" style="width: 300px; height: 400px; border-radius: 8px;">
+               <div class="canva"
+                    style="position: relative; width:300px; height: 400px; padding-top: 0;padding-bottom: 0; margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+                    <iframe loading="lazy"
+                        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                        src="https://www.canva.com/design/DAGXLZuGSeA/T4_IhX_zubmt80-CuLqd1g/view?embed"
+                        allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+                </div>
                 <p style="text-align: justify;">
                     Salah satu elemen penting dalam strategi promosi kami adalah desain poster produk. Kami mendesain
                     poster dengan menggunakan aplikasi <i style="font-style: italic;">Canva</i> untuk membuat tampilan yang menarik menggunakan warna-warna
