--- a/promosi.html
+++ b/promosi.html
@@ -129,7 +129,7 @@
                     yang kami buat mudah dibaca dan memberikan kesan profesional yang sesuai dengan citra merek kami.
                     Selain itu, kami juga menambahkan elemen visual yang mencerminkan tema dan identitas toko kami, agar
                     poster dapat menonjol dan menarik perhatian. Poster kami unggah melalui Instagram dan juga
-                    menyebarkannya ke WhatsApp untuk menjangkau lebih banyak audiens.
+                    menyebarkannya ke <i style="font-style: italic;">WhatsApp</i> untuk menjangkau lebih banyak audiens.
                 </p>
             </section>
 
@@ -174,9 +174,9 @@
                     menunjukkan upaya yang kami lakukan. Selain itu, kami juga akan memposting informasi yang lebih
                     formal mengenai detail bazar, seperti waktu, lokasi, dan produk yang akan dijual. Dengan cara ini,
                     kami ingin audiens merasa lebih dekat dengan kami dan tertarik untuk datang melihat bazar kami.
-                    Selain itu, kami juga akan memanfaatkan fitur Instagram Stories untuk memberikan cuplikan sekilas
+                    Selain itu, kami juga akan memanfaatkan fitur <i style="font-style: italic;">Instagram Stories</i> untuk memberikan cuplikan sekilas
                     dari kegiatan harian kami, misalnya sneak peek produk atau pengumuman penting seputar bazar. Melalui
-                    update rutin di feed dan stories, kami ingin menjaga audiens tetap terinformasi dan terlibat dengan
+                    update rutin di <i style="font-style: italic;">feed</i> dan <i style="font-style: italic;">stories</i>, kami ingin menjaga audiens tetap terinformasi dan terlibat dengan
                     promosi kami. Konten yang kami unggah akan mencerminkan citra merek yang ramah dan profesional, agar
                     audiens merasa percaya dan tertarik dengan produk yang kami tawarkan.
                 </p>
@@ -197,17 +197,17 @@
                 </div>
 
                 <p style="text-align: justify; width: 700px;">
-                    Di TikTok, kami akan membuat konten promosi yang mengikuti tren dan tantangan populer di platform
+                    Di <i style="font-style: italic;">TikTok</i>, kami akan membuat konten promosi yang mengikuti tren dan tantangan populer di <i style="font-style: italic;">platform</i>
                     tersebut, dengan tujuan menarik perhatian audiens yang lebih luas. Kami akan membuat video pendek
                     yang kreatif dan menyenangkan, memanfaatkan musik, efek visual, dan filter untuk menambah daya
-                    tarik. Dalam video-video ini, kami akan menampilkan produk kami secara lebih dinamis dan engaging,
+                    tarik. Dalam video-video ini, kami akan menampilkan produk kami secara lebih dinamis dan menarik,
                     sehingga audiens dapat melihat lebih jelas dan tertarik untuk membeli. Kami juga akan menggunakan
-                    fitur hashtag untuk memastikan video kami mudah ditemukan oleh orang-orang yang tertarik dengan
+                    fitur <i style="font-style: italic;">hashtag</i> untuk memastikan video kami mudah ditemukan oleh orang-orang yang tertarik dengan
                     produk atau acara bazar.
-                    <br>Kami juga berencana untuk menggunakan TikTok sebagai platform untuk membuat konten yang lebih
-                    ringan dan menghibur, seperti video behind the scenes atau tips-tips menarik seputar produk yang
-                    kami jual. Konten TikTok yang fun dan mengikuti tren ini akan membantu memperkenalkan produk kami
-                    dengan cara yang lebih santai dan menarik. Dengan begitu, audiens TikTok yang lebih muda atau yang
+                    <br>Kami juga berencana untuk menggunakan <i style="font-style: italic;">TikTok</i> sebagai <i style="font-style: italic;">platform</i> untuk membuat konten yang lebih
+                    ringan dan menghibur, seperti video <i style="font-style: italic;">behind the scenes</i> atau tips-tips menarik seputar produk yang
+                    kami jual. Konten <i style="font-style: italic;">TikTok</i> yang seru dan mengikuti tren ini akan membantu memperkenalkan produk kami
+                    dengan cara yang lebih santai dan menarik. Dengan begitu, audiens <i style="font-style: italic;">TikTok</i> yang lebih muda atau yang
                     lebih suka konten yang cepat dan menghibur bisa tertarik untuk mengunjungi bazar kami dan membeli
                     produk yang kami tawarkan.</br>
                 </p>
