--- a/promosi.html
+++ b/promosi.html
@@ -175,7 +175,7 @@
                     formal mengenai detail bazar, seperti waktu, lokasi, dan produk yang akan dijual. Dengan cara ini,
                     kami ingin audiens merasa lebih dekat dengan kami dan tertarik untuk datang melihat bazar kami.
                     Selain itu, kami juga akan memanfaatkan fitur <i style="font-style: italic;">Instagram Stories</i> untuk memberikan cuplikan sekilas
-                    dari kegiatan harian kami, misalnya sneak peek produk atau pengumuman penting seputar bazar. Melalui
+                    dari kegiatan harian kami, misalnya <i https://ludmillajem.github.io/LESTARIKA-LUMINIA/promosi.html>sneak peek</i> produk atau pengumuman penting seputar bazar. Melalui
                     update rutin di <i style="font-style: italic;">feed</i> dan <i style="font-style: italic;">stories</i>, kami ingin menjaga audiens tetap terinformasi dan terlibat dengan
                     promosi kami. Konten yang kami unggah akan mencerminkan citra merek yang ramah dan profesional, agar
                     audiens merasa percaya dan tertarik dengan produk yang kami tawarkan.
