--- a/statistik jualan.html
+++ b/statistik jualan.html
@@ -66,6 +66,10 @@
 
     <div class="isi">
         <div class="text">
+            <h1>Aritmatik Sosial</h1>
+            <p>U = HJ - HB</p>
+            <p>&U = U / HB x 100% </p>
+            <br>
             <h1>Statistik Jualan</h1>
             <div class="imgs1">
                 <img src="statistik1.jpg" style="width: 500px;">
