--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -121,25 +121,33 @@
             <h2>Manfaat</h2>
             <ol>
                 <li>Manfaat bagi siswi
-                    <dd>Melalui kegiatan ini, siswi dapat mengembangkan keterampilan, bekerja sama dalam tim, serta meningkatkan
-                        kreativitas dalam berwirausahaan dan seni pertunjukkan. Tak hanya itu, siswi juga dapat belajar
-                        menghadapi tantangan dan menemukan solusi dalam setiap tahap persiapan hingga pelaksanaan.</dd>
+                    <ul>
+                        <li>Mendapatkan inspirasi dan motivasi dari pengalaman langsung.</li>
+                        <li>Memperoleh wawasan baru tentang cara mengembangkan ide menjadi karya nyata</li>
+                        <li>Pemicu untuk lebih aktif berpartisipasi dalam kegiatan sekolah lainnya.</li>
+                        <li>Meningkatkan rasa percaya diri dan semangat berkreasi.</li>
+                    </ul>
                 </li>
                 <li>Manfaat bagi sekolah
-                    <dd>Melalui kegiatan ini menjadi sarana bagi sekolah untuk menunjukkan kualitas pembelajaran yang inovatif
-                    dan aplikatif. Selain itu, acara ini dapat me mendukung pengembangan karakter, kreativitas, dan
-                    keterampilan siswi di berbagai bidang.</dd>
+                    <ul>
+                        <li>Menjadi sarana untuk menunjukkan kualitas pembelajaran yang inovatif dan aplikatif.</li>
+                        <li>Mendukung pengembangan karakter, kreativitas, dan keterampilan siswi.</li>
+                    </ul>
                 </li>
                 <li>Manfaat bagi pihak lain
-                    <dd>Bazar dan pentas seni dapat menjadi inspirasi bagi pihak lain, baik dalam bidang kewirausahaan maupun
-                    seni. Selain itu, acara ini juga membuka peluang bagi kerja sama dengan pihak eksternal yang tertarik
-                    untuk mendukung atau berpartisipasi dalam kegiatan serupa.</dd>
+                    <ul>
+                        <li>Menjadi inspirasi dalam bidang kewirausahaan dan seni.</li>
+                        <li>Membuka peluang kerja sama dengan pihak eksternal.</li>
+                        <li>Memberikan ruang kontribusi bagi komunitas sekitar dalam mendukung pendidikan.</li>
+                    </ul>
                 </li>
                 <li>Manfaat bagi pelaksana
-                    <dd>Bagi para pelaksana, kegiatan ini memberikan pengalaman langsung dalam mengelola sebuah proyek besar,
-                    mulai dari perencanaan, kerja sama tim, hingga pelaksanaan di lapangan. Pelaksana juga belajar bagaimana
-                    menerapkan ilmu yang telah diperoleh dalam situasi nyata, baik dalam aspek kewirausahaan maupun seni
-                    pertunjukan.</dd>
+                    <ul>
+                        <li>Mendapatkan pengalaman langsung dalam mengelola proyek besar.</li>
+                        <li>Mempelajari proses perencanaan hingga pelaksanaan di lapangan.</li>
+                        <li>Melatih kemampuan kerja sama tim dalam situasi nyata.</li>
+                        <li>Meningkatkan pemahaman di bidang kewirausahaan.</li>
+                    </ul>
                 </li>
             </ol>
         </div>
