--- a/statistik jualan.html
+++ b/statistik jualan.html
@@ -67,9 +67,13 @@
     <div class="isi">
         <div class="text">
             <h1>Aritmatik Sosial</h1>
-            <p>U = HJ - HB</p>
+            <p>U = HJ - HB</p
+            <p>2,756,234 = 6,366,000 - 3,969,766</p>
+            <p>Laba bersih = 2,756,234 - 1,000,000</p>
+            <p>Laba bersih = 1,756,234 (dikurangkan gaji)
             <p>&U = U / HB x 100% </p>
-            <br>
+            <p>44.2% = 1,756,234/3,969,766 * 100%</p>
+            
             <h1>Statistik Jualan</h1>
             <div class="imgs1">
                 <img src="statistik1.jpg" style="width: 500px;">
